--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path");
 
 module.exports = {
-  config: path.resolve("./src", "config.json"), //file config: lam sa de ket noi den db
+  config: path.resolve("./src/config", "config.json"), //file config: lam sao de ket noi den db
   "migrations-path": path.resolve("./src", "migrations"),
   "models-path": path.resolve("./src", "models"),
   "seeders-path": path.resolve("./src", "seeders"), //tao du lieu fake
