--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejsinit",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js"
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
